--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.2",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
