--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,17 @@
     "bootstrap": "^5.2.2",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
-    "react-icons": "^4.4.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
